# 4WIS-Hybrid-Astar-Safe-Corridor-Optimization

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
config/: planner.yaml
docs/: parameters.md
include/fourwis_hybrid_astar_cpp/: planner_core.hpp  safe_corridor_optimizer.hpp  status_panel.hpp
launch/: planner.launch.py
rviz/: planner.rviz
scripts/: casadi_backend.py
src/: demo_map_node.cpp  planner_core.cpp  planner_node.cpp  safe_corridor_optimizer.cpp  status_panel.cpp
