<?xml version="1.0"?>
<package format="3">
  <name>fourwis_hybrid_astar_cpp</name>
  <version>0.1.0</version>
  <description>C++ ROS2 Humble Ackermann Hybrid A* planner with CasADi trajectory optimization.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>ompl</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz2</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
